# Negfinetun-VLA

./: .gitignore  .pre-commit-config.yaml  10_nvidia.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build-prj.md  pyproject.toml
docker/: Dockerfile  README.md
docs/: index.html  pre-training.md  rise-rl-training.md  rl-post-training.md  styles.css
docs/results/: v13-libero-spatial-curve.json  v14-libero-spatial-curve.json
docs/superpowers/plans/: 2026-04-28-action-conditioned-sft-implementation.md
docs/superpowers/specs/: 2026-04-24-action-conditioned-expert-and-oar-rollout-design.md  2026-04-25-diffusion-nft-loss-design.md  2026-04-28-action-conditioned-sft-design.md
examples/embodiment/: batch_eval_embodiment.sh  batch_eval_mani_ood.sh  eval_embodied_agent.py  eval_mani_ood.sh  run_embodiment.sh  run_rise_rl.sh  train_embodied_agent.py
examples/embodiment/config/: libero_10_nft_actor_openpi.yaml  libero_10_nft_actor_openpi_pi05.yaml  libero_10_ppo_openpi.yaml  libero_10_ppo_openpi_pi05.yaml  libero_goal_nft_actor_openpi.yaml  libero_goal_nft_actor_openpi_pi05.yaml  libero_goal_ppo_openpi.yaml  libero_goal_ppo_openpi_pi05.yaml  libero_object_nft_actor_openpi.yaml  libero_object_nft_actor_openpi_pi05.yaml  libero_object_ppo_openpi.yaml  libero_object_ppo_openpi_pi05.yaml  libero_spatial_nft_actor_openpi.yaml  libero_spatial_nft_actor_openpi_pi05.yaml  libero_spatial_ppo_openpi.yaml  libero_spatial_ppo_openpi_pi05.yaml  libero_spatial_rise_actor_openpi_pi05.yaml  maniskill_nft_actor_openpi.yaml  maniskill_nft_actor_openpi_pi05.yaml  maniskill_ppo_openpi.yaml  maniskill_ppo_openpi_pi05.yaml
ray_utils/: check_ray.sh  start_ray.sh
ray_utils/realworld/: setup_before_ray.sh
requirements/: README.md  install.sh
requirements/docs/: requirements.txt
requirements/embodied/: ros_install.sh  sys_deps.sh
requirements/embodied/models/: gr00t.txt
rlinf/: __init__.py  config.py
rlinf/algorithms/: __init__.py  advantages.py  losses.py  registry.py  utils.py
rlinf/data/: io_struct.py  replay_buffer.py  tokenizers.py  utils.py
rlinf/data/datasets/: __init__.py  item.py  vlm.py
rlinf/data/tool_call/: tool_io_struct.py
rlinf/envs/: __init__.py  action_utils.py  env_manager.py  utils.py
rlinf/envs/behavior/: behavior_env.py  behavior_task.jsonl
rlinf/envs/calvin/: __init__.py  calvin_gym_env.py  utils.py  venv.py
rlinf/envs/frankasim/: __init__.py  frankasim_env.py
rlinf/envs/isaaclab/: __init__.py  isaaclab_env.py  utils.py  venv.py
rlinf/envs/libero/: libero_env.py  utils.py  venv.py
rlinf/envs/maniskill/: __init__.py  utils.py  (+2 more)
rlinf/models/: __init__.py
rlinf/runners/: async_embodied_runner.py  embodied_eval_runner.py  embodied_runner.py  sft_runner.py
rlinf/scheduler/: __init__.py
rlinf/utils/: data_iter_utils.py  data_process.py  distributed.py  flops.py  initialize.py  logging.py  metric_logger.py  metric_utils.py  nested_dict_process.py  omega_resolver.py  patcher.py  placement.py  profiler.py  readme_profiler.md  runner_utils.py  timers.py  torch_functionals.py  train_utils.py  utils.py
tests/unit_tests/: test_auto_placement.py  test_channel.py  test_cluster_config.py  test_comm.py  test_intra_gpu_comm.py  test_placement.py  test_worker.py
toolkits/auto_placement/: auto_placement_worker.py  fitter.py  node.py  placement.py  util.py  workflow.py
toolkits/ckpt_convertor/: convert_openpi_jax_to_python.py
toolkits/eval_scripts_openpi/: README.md  __init__.py  calvin_eval.py  libero_eval.py  metaworld_eval.py  run.sh
toolkits/realworld_check/: test_camera.py  test_controller.py
(+237 files in other folders)
